dark-cloud-website/src/app/weapons/weapon-list.component.css
thead {
  color: #337AB7;
}
thead th {
  text-align: center; /* Center the text in the table header cells */
}

.tier-cell {
  text-align: center; /* Center the text */
  font-size: 1.2em; /* Make the text a bit bigger */
  vertical-align: middle; /* Center the text vertically */
}
.weapon-cell, .character-cell {
  text-align: center; /* Center the text */
  height: 100%; /* Ensure the cell takes the full height of the row */
}

.weapon-thumbnail, .character-portrait {
  width: 75px; /* Set the desired width */
  height: 75px; /* Set the desired height */
  object-fit: cover; /* Ensure the image covers the area while maintaining aspect ratio */
  margin-bottom: 5px; /* Add some space between the image and the text */
}

.character-filter {
  display: flex;
  align-items: center;
  gap: 10px; /* Add some space between the images */
}

.character-portrait.grayscale {
  filter: grayscale(100%);
}

.row.align-items-center {
  align-items: center; /* Vertically center the items in the row */
}

